--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/black">
 
     <fragment
+        class = "com.example.apptv2.MainFragment"
         android:id="@+id/mainfragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
